# bzzzbz

./: .gitignore  .gitmodules  AudioProcessing.cpp  AudioProcessing.h  CMakeCache.txt  CMakeLIsts.txt  CMakeLists.txt  Doxyfile  MCP3008Comm.h  Makefile  README.md  bz  cmake_install.cmake  dependencies.sh  deploy.sh  gpio-sysfs.cpp  main.cpp  moving_triangle.cpp  shader_utils.cpp  shader_utils.h
AudioProcessing/: main.cpp
VideoProcessing/colortest/: LUtil.h  colortestx
VideoProcessing/triangle disp/: LUtil.cpp  LUtil.h  main.cpp  readme.txt
VideoProcessing/triangle_video/: fancytri
audio_processing/: Makefile  audioin.c  kiss_fft_test.cpp  simple_jack_client.c
audio_processing/plot/: audio_plot.ipynb
audio_processing/samples/: fft_64buf_sin440.txt  mic_samples.txt
control/: CMakeLists.txt  MCP3008Comm.cpp  MCP3008Comm.h  gpio-sysfs.h  spi_test  spi_test.cpp
docs/: index.html  mainpage.dox
docs/html/: AudioProcessing_8h.html  AudioProcessing_8h_source.html  MCP3008Comm_8cpp.html  MCP3008Comm_8h.html  MCP3008Comm_8h_source.html  TestLatency_8h.html  TestLatency_8h_source.html  __kiss__fft__guts_8h_source.html  annotated.html  audioin_8c.html  cells_8glsl.html  classAudioProcessing.html  classAudioProcessingCallback.html  classMCP3008Comm.html  classMCP3008callback.html  classMCP3008pollChannelsCallback.html  classMCP3008printSampleCallback.html  classPrintSampleCallBack.html  classReadBuffer.html  classTestLatency.html  classes.html  creation_8glsl.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_02360bd02ac1201056da1daa384a18e9.html  dir_0a4b4be470ccb3aa51643a03ee90aa9a.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_1473a0d4c9df8fb8d7b6eb5cf4ab950d.html  dir_1ba8b0a97e13342e2e3655fa6bde0cb4.html  (+75 more)
hardware/: README.md
kiss-fft/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
shaders/: EQ.glsl  cells.glsl
src/: AudioProcessing.cpp  AudioProcessing.h  CMakeLists.txt  MCP3004Comm.cpp  MCP3004Comm.h  MCP3008Comm.cpp  MCP3008Comm.h  TestLatency.cpp  TestLatency.h  bz  dependencies.sh  main.cpp  shader_utils.cpp  shader_utils.h
src/audio_processing/: CMakeLists.txt  Makefile
src/audio_processing/plot/.ipynb_checkpoints/: audio_plot-checkpoint.ipynb
src/audio_processing_examples/: audioin  audioin.c
src/control/: MCP3008Comm.cpp  MCP3008Comm.h  Makefile
src/control_examples/: CMakeLists.txt  spi_test.cpp
src/examples/: CMakeLists.txt  Makefile  ex_SPI.cpp  ex_audio.cpp  ex_audio_slow.cpp  ex_opengl.cpp
src/kiss-fft/: CMakeLists.txt
src/kiss-fft/jnifft/src/androidTest/java/uk/me/berndporr/kiss_fft/: FFTTest.java
src/shaders/: EQ_slow.glsl  cells.glsl  cells_waves.glsl  creation.glsl  scifi_lights.glsl  spectrum.glsl  spectrum_slow.glsl  vertex.glsl  wavepatterns.glsl
src/video_processing/: EQwindow.cpp  window.cpp
src/video_processing/Backup/: test.f.glsl  window.v.glsl
src/video_processing/audio_processing/plot/: audio_plot.ipynb
src/video_processing/old/: main.cpp
src/video_processing/old/triangle_video/: shader_utils.cpp  triangle.cpp
src/video_processing/shaders/: cells_waves.glsl  creation.glsl  scifi_lights.glsl  vertex.glsl  wavepatterns.glsl
test/: CMakeLists.txt  test.cpp  testAudioProcessing.cpp  testMCP3008Comm.cpp
test/audio_daq_test/: CMakeLists.txt  README.md
test/audio_daq_test/plot/: audio_plot.ipynb
test/display/: GPIODUtils.cpp  GPIODUtils.h  Makefile  NHD223Comm.cpp  NHD223Comm.h  main.cpp  seq.cpp
test/inputs/: sinewave_432Hz.txt
test/spi_test/: CMakeLists.txt  README.md  spi_test.cpp
video_processing/: Makefile  shader_utils.cpp  shader_utils.h  window.cpp
(+115 files in other folders)
